--- a/movieAndgame/src/main/resources/templates/game/layout.html
+++ b/movieAndgame/src/main/resources/templates/game/layout.html
@@ -5,12 +5,12 @@
 >
 
 <head>
-	<title layout:fragment="title">게임홈</title>
+	<title layout:fragment="title"></title>
 	<th:block layout:fragment="css"></th:block>
 	<th:block layout:fragment="js"></th:block>
 </head>
 	<div layout:fragment="main" id="main">
-		
+	
 	</div>
 
 </html>
