--- a/movieAndgame/src/main/resources/templates/game/header.html
+++ b/movieAndgame/src/main/resources/templates/game/header.html
@@ -4,9 +4,9 @@
 	<div id="nav">
 		<ul id="menuList">
 			<li> <a href="">PC게임</a></li>
-			<li> <a href="/game/m">모바일게임</a></li>
+			<li> <a href="/gamePost/m">모바일게임</a></li>
 			<li> <a href="">콘솔게임</a></li>
-			<li> <a href="">게임리뷰</a></li>
+			<li> <a href="">평론가리뷰</a></li>
 			<li> <a href="">자유게시판</a></li>
 		</ul>
 		<div id="userALogo">
