--- a/movieAndgame/src/main/resources/templates/game/member/login.html
+++ b/movieAndgame/src/main/resources/templates/game/member/login.html
@@ -7,6 +7,11 @@
 	<title layout:fragment="title">로그인</title>
 	<th:block layout:fragment="css"></th:block>
 	<th:block layout:fragment="js"></th:block>
+	<th:block th:if="${fail}">
+		<script th:inline="javascript">
+			alert("아이디 또는 비밀번호가 잘못 되었습니다.");
+		</script>
+	</th:block>
 </head>
 
 	<div layout:fragment="main" id="main">
