--- a/movieAndgame/src/main/resources/static/css/default.css
+++ b/movieAndgame/src/main/resources/static/css/default.css
@@ -25,7 +25,7 @@ a{color:inherit; text-decoration: none;}
 	justify-content:space-evenly;
 }
 #userALogo{
-	width:350px; display:flex;
+	width:450px; display:flex;
 	height:80px; 
 }
 #userALogo .logo{
@@ -35,8 +35,11 @@ a{color:inherit; text-decoration: none;}
 }
 .userbox span{
 	line-height:80px;
+	padding:0 5px;
 }
 #header{
 	height:auto;
 }
+
+
 
