--- a/movieAndgame/src/main/resources/templates/movie/index.html
+++ b/movieAndgame/src/main/resources/templates/movie/index.html
@@ -9,7 +9,9 @@
 	
 	<div layout:fragment="main" id="main">
 		index.html main 부분
-	
+		<!-- 내장객체는 앞에 # 붙어야됨 
+		<b th:text="${#session.getAttribute('user').email}"></b> -->
+		
 	</div>
 	
 </html>
