--- a/movieAndgame/src/main/resources/templates/game/post/write.html
+++ b/movieAndgame/src/main/resources/templates/game/post/write.html
@@ -16,10 +16,10 @@
 		<p th:if="${#fields.hasErrors('writer')}" th:erros="*{writer}"></p>
 			제목 : <input type="text" th:field="*{title}"><br>
 		<p th:if="${#fields.hasErrors('title')}" th:erros="*{title}"></p>
-			게임이름 : <input type="text" th:field="*{gameName}"><br>
-		<p th:if="${#fields.hasErrors('gameName')}" th:erros="*{gameName}"></p>
-			공략내용 : <input type="text" th:field="*{targetPost}"><br>
-		<p th:if="${#fields.hasErrors('targetPost')}" th:erros="*{targetPost}"></p>
+			게임이름 : <input type="text" th:field="*{game_name}"><br>
+		<p th:if="${#fields.hasErrors('game_name')}" th:erros="*{game_name}"></p>
+			공략내용 : <textarea th:field="*{target_post}"></textarea> <br>
+		<p th:if="${#fields.hasErrors('target_post')}" th:erros="*{target_post}"></p>
 			<button>공략 작성</button>
 		</form>
 	</div>
