--- a/movieAndgame/src/main/resources/templates/movie/review/index.html
+++ b/movieAndgame/src/main/resources/templates/movie/review/index.html
@@ -15,6 +15,29 @@
 		</div>
 		<div id="section_middle">
 			<table id="reviewList">
+				<tr>
+					<th class=num>번호</th>
+					<th class="title">제목</th>
+					<th class="date">작성일</th>
+				</tr>
+<!-- th:each="변수 : ${배열 또는 컬렉션}"
+	동작 -> ${}의 0번 인덱스 값부터 변수에 하나씩 저장된다.
+-->
+	
+				<tr th:each="row : ${reviewList}">
+					<td class="num" th:text="${row.review_id}"></td>
+					<td class="title"><a th:href="@{'/movieMenu/view/'+${row.review_id}}" th:text="${row.title}"></a></td>
+					<td class="date" th:text="${#temporals.format(row.write_date, 'yyyy-MM-dd')}"></td>
+				</tr>
+<!-- 
+	thymleaf 날짜 출력
+	${#temporals.formatISO(변수명)}
+	
+	${#dates.format(변수명, 'yyyy-mm-dd HH:mm')}
+	${#temporals.format(변수명 , 'yyyy-MM-dd')}
+
+ -->
+				
 			</table>
 		</div>
 		<div id="section_bottom">
